Cleaned up the pickle jar. Also formatted some stonk data for training
and validation.

--- a/notebooks/technical_prediction/technical_prediction_data.ipynb
+++ b/notebooks/technical_prediction/technical_prediction_data.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "junior-questionnaire",
+   "execution_count": 23,
+   "id": "biblical-citizenship",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('./../src')\n",
+    "sys.path.append('./../../src')\n",
     "\n",
     "# python's shit\n",
+    "from os import path\n",
     "from datetime import date, datetime, timedelta\n",
     "import time\n",
     "import calendar\n",
@@ -21,24 +22,25 @@
     "\n",
     "# my shit\n",
     "import config\n",
-    "from lib.pickle_jar import PickleJar"
+    "from lib.stonk_jar import StonkJar"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "subtle-scholarship",
+   "id": "aggregate-gather",
    "metadata": {},
    "outputs": [],
    "source": [
     "finnhub_client = finnhub.Client(api_key=config.api_keys['finnhub']['sandbox'])\n",
-    "jar = PickleJar()"
+    "ticker = 'AMC'\n",
+    "jar = StonkJar(ticker)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "happy-narrative",
+   "id": "alternative-appearance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,39 +52,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "arctic-baltimore",
+   "execution_count": 13,
+   "id": "specific-retreat",
    "metadata": {},
    "outputs": [],
    "source": [
     "def recommendation_trends_by_date(ticker, date):\n",
     "    first_of_month = date.replace(day = 1)\n",
-    "    recommendations = finnhub_client.recommendation_trends(ticker)\n",
+    "    recommendations = jar.pickle_back(\n",
+    "        \"{0}_recommendations.pkl\".format(ticker),\n",
+    "        finnhub_client.recommendation_trends,\n",
+    "        ticker)\n",
     "    recommendation = [r for r in recommendations if datetime.strptime(r['period'], '%Y-%m-%d').date() == first_of_month]\n",
     "    if (len(recommendation) > 0):\n",
     "        return recommendation[0]\n",
-    "    return None"
+    "    return {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "reasonable-regulation",
+   "execution_count": 12,
+   "id": "successful-subsection",
    "metadata": {},
    "outputs": [],
    "source": [
     "def company_earnings_by_date(ticker, date):\n",
     "    reporting_period = timedelta(days = 90)\n",
-    "    earnings = finnhub_client.company_earnings(ticker)\n",
+    "    earnings = jar.pickle_back(\n",
+    "        \"{0}_earnings.pkl\".format(ticker),\n",
+    "        finnhub_client.company_earnings,\n",
+    "        ticker)\n",
     "    earning = [r for r in earnings if datetime.strptime(r['period'], '%Y-%m-%d').date() + reporting_period > date]\n",
     "    if (len(earning) > 0):\n",
     "        return earning[0]\n",
-    "    return None"
+    "    return {}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "technical-robert",
+   "id": "ordered-morrison",
    "metadata": {},
    "source": [
     "Build a base data frame from the stock's low, open, close, high and volume for the given time period"
@@ -91,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "smart-receiver",
+   "id": "governmental-drove",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "economic-riding",
+   "id": "imposed-twins",
    "metadata": {},
    "source": [
     "Construct a set of data frames that each hold:\n",
@@ -127,8 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "compliant-latest",
+   "execution_count": 19,
+   "id": "perfect-needle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,8 +144,10 @@
     "    trend = recommendation_trends_by_date(ticker, date)\n",
     "    trend_total = trend['strongSell'] + trend['sell'] + trend['hold'] + trend['buy'] + trend['strongBuy']\n",
     "    earnings = company_earnings_by_date(ticker, date)\n",
-    "    static_data = [\n",
-    "        earnings['actual'], earnings['estimate'],\n",
+    "    static_data = []\n",
+    "    if 'actual' in earnings and 'estimate' in earnings:\n",
+    "        static_data = static_data.append(earnings['actual'], earnings['estimate'])\n",
+    "    static_data = static_data + [\n",
     "        trend['strongSell'] / trend_total, trend['sell'] / trend_total,\n",
     "        trend['hold'] / trend_total,\n",
     "        trend['buy'] / trend_total, trend['strongBuy'] / trend_total\n",
@@ -148,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assured-prophet",
+   "id": "fitting-basis",
    "metadata": {},
    "source": [
     "Go through the calendar and fetch all the historical data on this ticker that we have access to.\n",
@@ -157,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "completed-violence",
+   "execution_count": 8,
+   "id": "curious-contrary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,18 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "sensitive-basketball",
+   "execution_count": 20,
+   "id": "similar-coalition",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_historical_data('AAPL')"
+    "df = get_historical_data(ticker)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "owned-james",
+   "execution_count": 50,
+   "id": "motivated-zoning",
    "metadata": {},
    "outputs": [
     {
@@ -243,113 +253,218 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>122.631000</td>\n",
-       "      <td>123.000000</td>\n",
-       "      <td>123.282900</td>\n",
-       "      <td>123.492000</td>\n",
-       "      <td>58</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>1.555857</td>\n",
-       "      <td>0.023973</td>\n",
-       "      <td>0.023973</td>\n",
-       "      <td>0.222603</td>\n",
-       "      <td>0.452055</td>\n",
-       "      <td>0.277397</td>\n",
+       "      <th>count</th>\n",
+       "      <td>63316.000000</td>\n",
+       "      <td>63316.000000</td>\n",
+       "      <td>63316.000000</td>\n",
+       "      <td>63316.000000</td>\n",
+       "      <td>63316.000000</td>\n",
+       "      <td>63316.000000</td>\n",
+       "      <td>63316.000000</td>\n",
+       "      <td>63316.000000</td>\n",
+       "      <td>63316.000000</td>\n",
+       "      <td>63316.000000</td>\n",
+       "      <td>23716.0</td>\n",
+       "      <td>23716.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>123.182840</td>\n",
-       "      <td>123.553500</td>\n",
-       "      <td>123.837673</td>\n",
-       "      <td>124.047714</td>\n",
-       "      <td>43</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>1.555857</td>\n",
-       "      <td>0.023973</td>\n",
-       "      <td>0.023973</td>\n",
-       "      <td>0.222603</td>\n",
-       "      <td>0.452055</td>\n",
-       "      <td>0.277397</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>195.631298</td>\n",
+       "      <td>196.219957</td>\n",
+       "      <td>196.297010</td>\n",
+       "      <td>197.004837</td>\n",
+       "      <td>49.762967</td>\n",
+       "      <td>-3.119571</td>\n",
+       "      <td>-1.798022</td>\n",
+       "      <td>0.341641</td>\n",
+       "      <td>0.255305</td>\n",
+       "      <td>0.297910</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>123.737162</td>\n",
-       "      <td>124.109491</td>\n",
-       "      <td>124.394943</td>\n",
-       "      <td>124.605929</td>\n",
-       "      <td>89</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>1.555857</td>\n",
-       "      <td>0.023973</td>\n",
-       "      <td>0.023973</td>\n",
-       "      <td>0.222603</td>\n",
-       "      <td>0.452055</td>\n",
-       "      <td>0.277397</td>\n",
+       "      <th>std</th>\n",
+       "      <td>52.110836</td>\n",
+       "      <td>52.267639</td>\n",
+       "      <td>52.289833</td>\n",
+       "      <td>52.476709</td>\n",
+       "      <td>28.588117</td>\n",
+       "      <td>4.094438</td>\n",
+       "      <td>2.480081</td>\n",
+       "      <td>0.191928</td>\n",
+       "      <td>0.160502</td>\n",
+       "      <td>0.244991</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>124.293980</td>\n",
-       "      <td>124.667983</td>\n",
-       "      <td>124.480981</td>\n",
-       "      <td>125.166655</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>1.555857</td>\n",
-       "      <td>0.023973</td>\n",
-       "      <td>0.023973</td>\n",
-       "      <td>0.222603</td>\n",
-       "      <td>0.452055</td>\n",
-       "      <td>0.277397</td>\n",
+       "      <th>min</th>\n",
+       "      <td>120.741238</td>\n",
+       "      <td>121.104551</td>\n",
+       "      <td>121.165225</td>\n",
+       "      <td>121.588970</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-8.410000</td>\n",
+       "      <td>-4.999500</td>\n",
+       "      <td>0.116883</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>124.045392</td>\n",
-       "      <td>124.418647</td>\n",
-       "      <td>124.704810</td>\n",
-       "      <td>124.916322</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>1.555857</td>\n",
-       "      <td>0.023973</td>\n",
-       "      <td>0.023973</td>\n",
-       "      <td>0.222603</td>\n",
-       "      <td>0.452055</td>\n",
-       "      <td>0.277397</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>150.998355</td>\n",
+       "      <td>151.452713</td>\n",
+       "      <td>151.516912</td>\n",
+       "      <td>152.058524</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>-8.410000</td>\n",
+       "      <td>-4.999500</td>\n",
+       "      <td>0.116883</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>187.973783</td>\n",
+       "      <td>188.539402</td>\n",
+       "      <td>188.581433</td>\n",
+       "      <td>189.293559</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.389381</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.203540</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>233.471665</td>\n",
+       "      <td>234.174187</td>\n",
+       "      <td>234.283435</td>\n",
+       "      <td>235.110884</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>0.116883</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.597403</td>\n",
+       "      <td>0.407080</td>\n",
+       "      <td>0.597403</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>362.305366</td>\n",
+       "      <td>363.395552</td>\n",
+       "      <td>364.231362</td>\n",
+       "      <td>364.849134</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>0.116883</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.597403</td>\n",
+       "      <td>0.407080</td>\n",
+       "      <td>0.597403</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           0           1           2           3   4     5         6   \\\n",
-       "0  122.631000  123.000000  123.282900  123.492000  58  1.68  1.555857   \n",
-       "1  123.182840  123.553500  123.837673  124.047714  43  1.68  1.555857   \n",
-       "2  123.737162  124.109491  124.394943  124.605929  89  1.68  1.555857   \n",
-       "3  124.293980  124.667983  124.480981  125.166655   5  1.68  1.555857   \n",
-       "4  124.045392  124.418647  124.704810  124.916322  19  1.68  1.555857   \n",
+       "                 0             1             2             3             4   \\\n",
+       "count  63316.000000  63316.000000  63316.000000  63316.000000  63316.000000   \n",
+       "mean     195.631298    196.219957    196.297010    197.004837     49.762967   \n",
+       "std       52.110836     52.267639     52.289833     52.476709     28.588117   \n",
+       "min      120.741238    121.104551    121.165225    121.588970      1.000000   \n",
+       "25%      150.998355    151.452713    151.516912    152.058524     25.000000   \n",
+       "50%      187.973783    188.539402    188.581433    189.293559     50.000000   \n",
+       "75%      233.471665    234.174187    234.283435    235.110884     75.000000   \n",
+       "max      362.305366    363.395552    364.231362    364.849134     99.000000   \n",
        "\n",
-       "         7         8         9         10        11  \n",
-       "0  0.023973  0.023973  0.222603  0.452055  0.277397  \n",
-       "1  0.023973  0.023973  0.222603  0.452055  0.277397  \n",
-       "2  0.023973  0.023973  0.222603  0.452055  0.277397  \n",
-       "3  0.023973  0.023973  0.222603  0.452055  0.277397  \n",
-       "4  0.023973  0.023973  0.222603  0.452055  0.277397  "
+       "                 5             6             7             8             9   \\\n",
+       "count  63316.000000  63316.000000  63316.000000  63316.000000  63316.000000   \n",
+       "mean      -3.119571     -1.798022      0.341641      0.255305      0.297910   \n",
+       "std        4.094438      2.480081      0.191928      0.160502      0.244991   \n",
+       "min       -8.410000     -4.999500      0.116883      0.000000      0.000000   \n",
+       "25%       -8.410000     -4.999500      0.116883      0.000000      0.000000   \n",
+       "50%        0.000000      0.000000      0.389381      0.285714      0.203540   \n",
+       "75%        0.116883      0.285714      0.597403      0.407080      0.597403   \n",
+       "max        0.116883      0.285714      0.597403      0.407080      0.597403   \n",
+       "\n",
+       "            10       11  \n",
+       "count  23716.0  23716.0  \n",
+       "mean       0.0      0.0  \n",
+       "std        0.0      0.0  \n",
+       "min        0.0      0.0  \n",
+       "25%        0.0      0.0  \n",
+       "50%        0.0      0.0  \n",
+       "75%        0.0      0.0  \n",
+       "max        0.0      0.0  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "overall-cemetery",
+   "metadata": {},
+   "source": [
+    "Now that we have raw hr resolution tick data, split it up into data 'complete' frames for training/validating. Each frame will have 10 ticks of data, 9 training ticks and the last verification ticks. This set of data will be randomized, split into a training set and a validation set, and then used to train the network."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "first-documentation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_frames = []\n",
+    "x = 0; total = len(df)\n",
+    "while x < total:\n",
+    "    real_frames = real_frames + [df.take(range(x, min(total-1, x+10)))]\n",
+    "    x += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "regular-appreciation",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'StonkJar' object has no attribute 'to_pickle_file'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-62-a2801c671958>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_pickle_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0}-all-data-{1}.pkl\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mticker\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoday\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%Y-%m-%d'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'StonkJar' object has no attribute 'to_pickle_file'"
+     ]
+    }
+   ],
+   "source": [
+    "jar.write_pickle_file(\"{0}-all-data-{1}.pkl\".format(ticker, date.today().strftime('%Y-%m-%d')), real_frames)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assigned-productivity",
+   "id": "nominated-assault",
    "metadata": {},
    "outputs": [],
    "source": []
