--- a/notebooks/technical_prediction/technical_prediction_exploration.ipynb
+++ b/notebooks/technical_prediction/technical_prediction_exploration.ipynb
@@ -2,8 +2,250 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "domestic-wilderness",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('./../../src')\n",
+    "\n",
+    "from lib.stonk_jar import StonkJar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "japanese-estate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ticker = 'AAPL'\n",
+    "jar = StonkJar(ticker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "eight-arlington",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "historical_pickle_name = \"{0}.technical.historical.df.pkl\".format(ticker)\n",
+    "data = jar.read_pickle_dataframe(historical_pickle_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cooperative-development",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>63182.000000</td>\n",
+       "      <td>63182.000000</td>\n",
+       "      <td>63182.000000</td>\n",
+       "      <td>63182.000000</td>\n",
+       "      <td>63182.000000</td>\n",
+       "      <td>63182.00</td>\n",
+       "      <td>63182.000000</td>\n",
+       "      <td>63182.000000</td>\n",
+       "      <td>63182.000000</td>\n",
+       "      <td>63182.000000</td>\n",
+       "      <td>63182.000000</td>\n",
+       "      <td>63182.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>197.463851</td>\n",
+       "      <td>198.058025</td>\n",
+       "      <td>198.139215</td>\n",
+       "      <td>198.850257</td>\n",
+       "      <td>50.043398</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>0.015223</td>\n",
+       "      <td>0.015223</td>\n",
+       "      <td>0.179619</td>\n",
+       "      <td>0.507436</td>\n",
+       "      <td>0.282498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>53.223850</td>\n",
+       "      <td>53.384002</td>\n",
+       "      <td>53.409532</td>\n",
+       "      <td>53.597538</td>\n",
+       "      <td>28.572038</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.011545</td>\n",
+       "      <td>0.011545</td>\n",
+       "      <td>0.019699</td>\n",
+       "      <td>0.034419</td>\n",
+       "      <td>0.006766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>119.778202</td>\n",
+       "      <td>120.138618</td>\n",
+       "      <td>120.198807</td>\n",
+       "      <td>120.619172</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.158140</td>\n",
+       "      <td>0.451613</td>\n",
+       "      <td>0.276549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>151.914016</td>\n",
+       "      <td>152.371130</td>\n",
+       "      <td>152.408394</td>\n",
+       "      <td>152.980614</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.158416</td>\n",
+       "      <td>0.476027</td>\n",
+       "      <td>0.276882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>190.178690</td>\n",
+       "      <td>190.750942</td>\n",
+       "      <td>190.787224</td>\n",
+       "      <td>191.513946</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>0.023585</td>\n",
+       "      <td>0.023585</td>\n",
+       "      <td>0.174658</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.278302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>236.146259</td>\n",
+       "      <td>236.856829</td>\n",
+       "      <td>236.933289</td>\n",
+       "      <td>237.804257</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.024194</td>\n",
+       "      <td>0.198630</td>\n",
+       "      <td>0.549505</td>\n",
+       "      <td>0.290960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>437.358287</td>\n",
+       "      <td>438.674310</td>\n",
+       "      <td>438.016299</td>\n",
+       "      <td>440.429007</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>1.555857</td>\n",
+       "      <td>0.024336</td>\n",
+       "      <td>0.024336</td>\n",
+       "      <td>0.223118</td>\n",
+       "      <td>0.551163</td>\n",
+       "      <td>0.292079</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 0             1             2             3             4   \\\n",
+       "count  63182.000000  63182.000000  63182.000000  63182.000000  63182.000000   \n",
+       "mean     197.463851    198.058025    198.139215    198.850257     50.043398   \n",
+       "std       53.223850     53.384002     53.409532     53.597538     28.572038   \n",
+       "min      119.778202    120.138618    120.198807    120.619172      1.000000   \n",
+       "25%      151.914016    152.371130    152.408394    152.980614     25.000000   \n",
+       "50%      190.178690    190.750942    190.787224    191.513946     50.000000   \n",
+       "75%      236.146259    236.856829    236.933289    237.804257     75.000000   \n",
+       "max      437.358287    438.674310    438.016299    440.429007     99.000000   \n",
+       "\n",
+       "             5             6             7             8             9   \\\n",
+       "count  63182.00  63182.000000  63182.000000  63182.000000  63182.000000   \n",
+       "mean       1.68      1.555857      0.015223      0.015223      0.179619   \n",
+       "std        0.00      0.000000      0.011545      0.011545      0.019699   \n",
+       "min        1.68      1.555857      0.000000      0.000000      0.158140   \n",
+       "25%        1.68      1.555857      0.000000      0.000000      0.158416   \n",
+       "50%        1.68      1.555857      0.023585      0.023585      0.174658   \n",
+       "75%        1.68      1.555857      0.024194      0.024194      0.198630   \n",
+       "max        1.68      1.555857      0.024336      0.024336      0.223118   \n",
+       "\n",
+       "                 10            11  \n",
+       "count  63182.000000  63182.000000  \n",
+       "mean       0.507436      0.282498  \n",
+       "std        0.034419      0.006766  \n",
+       "min        0.451613      0.276549  \n",
+       "25%        0.476027      0.276882  \n",
+       "50%        0.500000      0.278302  \n",
+       "75%        0.549505      0.290960  \n",
+       "max        0.551163      0.292079  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "subject-extreme",
+   "id": "alike-separate",
    "metadata": {},
    "outputs": [],
    "source": []
